fix(discover): sidebar selected item color
on light mode the default is white making it hard to see

--- a/src/modules/discover/sidebar.less
+++ b/src/modules/discover/sidebar.less
@@ -11,6 +11,7 @@ div[class*="sidebar_"] {
 
         &[class*="selectedCategoryItem_"] {
             >div[class*="itemInner_"] {
+                color: var(--text-normal);
                 background-color: var(--dnome-list-item-selected);
 
                 &:hover {
